# QGIS_LinesRankingPlugin

./: .readthedocs.yaml  README.md  __init__.py  graph_processing.py  lines_ranking.py  lines_ranking_dialog.py  lines_ranking_dialog_base.ui  metadata.txt  mkdocs.yml  mock.py  preparation.py  pyproject.toml  resources.py  resources.qrc  worker_class.py
core/: constants.py  convert.py  load.py  main.py  mock.py  paths.py  values.py
docs/: about.md  index.md
docs/theoretical/: algorithm.md  graphs.md  vector_data.md
docs/usage/: functionality_review.md  install.md  rails_case.md  river_case.md  troubleshooting.md
example_data/: Ob_river.dbf  Ob_river.shp  Ob_river.shx  data_example.csv  data_example_length.csv  fin_rails.dbf  fin_rails.shp  fin_rails.shx  river_example.dbf  river_example.shx  river_example_.shp  start_point_example.dbf  start_point_example.shp  start_point_example.shx
tests/: test_adjacency_list.py  test_distance_and_rank_assign.py  test_values_assign.py
