[tool.poetry]
name = "qgis_linesrankingplugin"
version = "0.1.0"
description = ""
authors = ["Dreamlone <mik_sar@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
mkdocs = "^1.4.3"
Jinja2 = "2.11.1"
contextfilter = "^0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
